Fixes header overlapped by content when Tumblr slide-out menu is open

--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ header {
   position: relative;
   overflow: hidden;
   height: 15rem;
+  z-index: 2;
 }
 
 .info-container {
